// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<div>
  <div
    class="container"
  />
</div>
`;

exports[`should render correctly 2`] = `
<div>
  <div
    class="container"
  >
    <div>
      Press + / - key to increase / decrease sides.
    </div>
  </div>
</div>
`;

exports[`should render correctly 3`] = `
<div>
  <div
    class="container"
  />
</div>
`;
